--- a/style.css
+++ b/style.css
@@ -133,6 +133,8 @@
         }
         
         body {
+            background-repeat: no-repeat;
+            background-attachment: fixed;
             min-height: 100%;
             padding: 0;
             margin: 0;
